--- a/test/fixtures/systems.yml
+++ b/test/fixtures/systems.yml
@@ -4,10 +4,10 @@ one:
   name: MyString
   description: MyText
   status: MyString
-  program: one
+  domain: one
 
 two:
   name: MyString
   description: MyText
   status: MyString
-  program: two
+  domain: two
