--- a/spec/fixtures/groups.yml
+++ b/spec/fixtures/groups.yml
@@ -1,7 +1,6 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
   name: MyString
+  description: MyText
   group_type: team
   email: MyString
   image_url: https://example.com/image.png
@@ -9,6 +8,7 @@ one:
 
 two:
   name: MyString
+  description: MyText
   group_type: team
   email: MyString
   image_url:
