feat: Added resources and refactored dependencies.

--- a/config/catalog_options.yaml
+++ b/config/catalog_options.yaml
@@ -83,3 +83,14 @@ platforms:
     name: 'Aptible'
     icon: 'cloud'
     description: 'Deployed on the Aptible PaaS.'
+
+resources:
+  bucket:
+    name: 'Bucket'
+    icon: 'box'
+  database:
+    name: 'Database'
+    icon: 'database'
+  queue:
+    name: 'Queue'
+    icon: 'rows-4'
