feat: [GitHub] Clean up issues table and GraphQL handling.

--- a/config/catalog_options.yaml
+++ b/config/catalog_options.yaml
@@ -55,6 +55,9 @@ kinds:
   database:
     name: 'Database'
     icon: 'database'
+  library:
+    name: 'Library'
+    icon: 'library'
   web:
     name: 'Web Service'
     icon: 'globe'
