--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -1,4 +1,4 @@
-name: "devportal"
+name: "junction"
 
 services:
   rails-app:
@@ -26,12 +26,12 @@ services:
     restart: unless-stopped
 
   postgres:
-    image: postgres:16.1
+    image: postgres:18
     restart: unless-stopped
     networks:
     - default
     volumes:
-    - postgres-data:/var/lib/postgresql/data
+    - postgres-data:/var/lib/postgresql
     environment:
         POSTGRES_USER: postgres
         POSTGRES_PASSWORD: postgres
