--- a/db/seeds/sample/systems.yaml
+++ b/db/seeds/sample/systems.yaml
@@ -1,10 +1,13 @@
-- name: Keystone Copwatch
+- name: Junction Codes
   status: active
-  domain: ACAB
-  image_url: https://static.wixstatic.com/media/9faa72_5827578c8ae64b098756bec01667ad50~mv2.png
-  description: Pennsylvania law enforcement accountability project.
-- name: DevPortal
+  domain: Junction
+  image_url: https://github.com/junction-codes.png
+  description: The core Junction devportal framework.
+- name: Plugin Marketplace
   status: active
-  domain: Shits & Giggles
-  image_url: https://e7.pngegg.com/pngimages/782/228/png-clipart-ruby-on-rails-rubygems-amazon-dynamodb-ruby-text-logo-thumbnail.png
-  description: A developer portal built on Rails and inspired by Backstage.
+  domain: Plugins
+  description: Marketplace for official and community Junction plugins.
+- name: Junction Demo Application
+  status: active
+  domain: Demo
+  description: A demonstration application showcasing Junction features.
