fix: Updated plugin system to support namespaces.

--- a/db/seeds/sample/components.yaml
+++ b/db/seeds/sample/components.yaml
@@ -19,3 +19,5 @@
   description: |
     Main web application for Junction, providing core functionality and user
     interface.
+  annotations:
+    github.com/project-slug: junction-codes/junction
