fix: Addressed pull request comments.

--- a/spec/fixtures/junction/roles.yml
+++ b/spec/fixtures/junction/roles.yml
@@ -1,7 +1,9 @@
 admin:
   name: Admin
+  description: Super user role with all permissions.
   system: true
 
 read_all:
   name: Read all
+  description: Read-only role with all read permissions.
   system: true
